# SSH

./: .gitignore  CMakeLists.txt  main.cpp  sshmainwindow.cpp  sshmainwindow.h  sshmainwindow.ui
reference/: .gitignore  libssh-0.1.1.tgz
